--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Caveat:wght@500&family=Lobster+Two:ital@1&display=swap"
+    rel="stylesheet">
   <title>fruit-veg-market 🍓</title>
 </head>
 
