--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Caveat:wght@500&family=Lobster+Two:ital@1&display=swap"
     rel="stylesheet">
-  <title>fruit-veg-market 🍓</title>
+  <title>summer-dessert-factory 🍓</title>
 </head>
 
 <body>
